minio-qumulus/manifests/console-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: <path:argocd:argocd-vars#cluster_issuer>
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/configuration-snippet: |
      chunked_transfer_encoding off;
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/server-snippet: |
      client_max_body_size 0;
    gethomepage.dev/app: minio
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "Services"
    gethomepage.dev/pod-selector: "v1.min.io/tenant=qumulus"
    gethomepage.dev/href: https://s3.<path:argocd:argocd-vars#region>.<path:argocd:argocd-vars#domain>
    gethomepage.dev/description: "Minio Tenant Console"
    gethomepage.dev/icon: minio.png
    gethomepage.dev/name: Minio Qumulus Tenant
  name: qumulus-console
spec:
  ingressClassName: nginx
  rules:
  - host: s3.<path:argocd:argocd-vars#region>.<path:argocd:argocd-vars#domain>
    http:
      paths:
        - backend:
            service:
              name: qumulus-console
              port:
                number: 9443
          path: /
          pathType: Prefix
  tls:
  - hosts:
    - s3.<path:argocd:argocd-vars#region>.<path:argocd:argocd-vars#domain>
    secretName: minio-console-cert
